--- a/about.html
+++ b/about.html
@@ -3,24 +3,48 @@
   <head>
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
+    <meta name="viewport" content="width=device-width", initial-scale="1.0" user-scalable=no>
+    <meta name="keywords" content="skin laser, tattoo removal, filler, get rid of pigmentation, get rid of acne scars, remove dark spots, revitalize skin, kerinchi bangsar, how to look younger, how to look pretty">
+    <meta name="description" content="Professional Aesthetic Doctors | Newlife-Lifestyle Aesthetic Clinic">
+    <meta property="og:title" content="Newlife-Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
+    <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
+    <meta name="copyright" content="Zenia Design">
+    <meta name="author" content="Zenia Design">
+    <meta name="web_author" content="Zenia Design">
+    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="reply-to" content="zeniadesign@hotmail.com">
+    <meta name="rating" content="general">
+    <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./img/newlife-favicon.png">
+    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
     <script  src="./js/animate.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113543330-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113543330-1');
+</script>
+
   </head>
   <body>
-    <span id="logo">  <img src="./img/newlife-logo.png" alt=""></span>
+    <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
 
     <div class="menu-bar">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
 
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
-          <li><a href="about.html">about</a></li>
+          <li ><a href="about.html" class="active link">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
           <li><a href="contact.html">contact</a></li>
@@ -35,7 +59,7 @@
         <ul>
           <span class="closebtn"><button type="button" name="button">&times;</button></span>
           <li><a href="index.html">home</a></li>
-          <li><a href="about.html">about</a></li>
+          <li ><a href="about.html" class="active link">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
           <li><a href="contact.html">contact</a></li>
@@ -44,22 +68,17 @@
     </div>
     <div class="contact-links">
       <ul>
-        <li><a href="tel:0322422822"><img src="./img/phoneicon1.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="tel:0322422822"><img src="./img/phoneicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://api.whatsapp.com/send?phone=60176960238&text=Hello,%20I%20would%20to%20make%20an%20appointment%20with%20your%20doctor." target="_blank"><img src="./img/whatsappicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://waze.com/ul?ll=3.1101032,101.6614844" target="_blank"><img src="./img/waze-icon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="mailto:lifecarelifestyle@yahoo.com"><img src="./img/emailicon.png" alt="" width="42px" height="42px"></a></li>
       </ul>
     </div>
     <section>
-      <div class="philosophy-title">
+      <div class="section-title">
         <h2>Our Philosophy</h2>
       </div>
       <div class="philosophy-info">
-        <figure>
-          <img src="./img/clinic-pic1.jpg" alt="">
-          <img src="./img/clinic-pic2.jpg" alt="">
-          <img src="./img/clinic-pic3.jpg" alt="">
-        </figure>
         <p>We provide professional cosmetic dermatology consultation before any treatment. This allow us to develop
         a coordinated treatment plan that is customized for each individual patient. <br><br>Every individual is different & special! <br><br>
       Advise and treatment offered will help patient achieve their desired goals and more importantly solutions which are to the best interest.
@@ -67,46 +86,60 @@
     <br><br>Educational support: A well informed patient is an asset to successful treatment and prevention. We provide you with a thorough explanation
     of your diagnosis and treatment option. </p>
       </div>
-      <div class="doctor-title">
-        <h2>Our Doctors</h2>
+    <div class="section-title">
+        <h2>Our Doctor</h2>
+    </div>
+
+    <div class="doctors">
+
+      <div class="doctor">
+        <div class="doctor-name">
+          <img src="./img/drng.jpg" alt="">
+          <div class="name">
+            <span id="bold">Dr. Ng Wai Hock </span>
+          </div>
+        </div>
+          <br>
+          <p> <span id="bold">MB BCh BAO ( Ireland ) LRCSI LRCPI</span><br>
+
+          <span id="bold">Dip Dermatology ( Cardiff )</span><br>
+          <span id="bold">FRACGP (Australia)</span><br>
+
+            <span id="bold">American Academy of Aesthetic Medicine ( AAAM )</span></br>
+            <span id="bold">American Board of Anti Ageing, Aesthetic & Rejuvenation Med ( ABAARM )</span><br>
+            <span id="bold">Member of Society of Anti Ageing, Aesthetic & Rejuvenation Med M’sia (SAAARM)</span><br>
+            <span id="bold">Member of Academy of Family Physician Malaysia ( AFPM )</span><br>
+
+            <br>Dr. Vincent Ng completed his Medical Degree with the National University of Ireland in 2002, before pursuing and completing a Diploma in Dermatology from Cardiff in 2008 and gained Fellowship with the Royal College of Family Physician of Australia (RACGP) in 2011. He is also a Board Certified Physician with American Academy of Aesthetic Medicine (AAAM) and American Academy of Anti- Ageing, Aesthetic and Rejuvenation Medicine (ABAARM).
+
+            He has since had many years of experience, combining Medical Dermatology teachings with Aesthetic principles, to achieve satisfying results for all range of patients; from treatment of skin pathology to achieving rejuvenation and delaying skin ageing.
+
+            Dr. Vincent Ng believes only in high quality products and services and is therefore well liked by many of his patients. Besides his winning personality and high technology treatment, he is also known as a very dedicated doctor. He believes everyone deserves a chance to look good and at the same time stay healthy; therefore sets out to help his patients with realistic expectations.</br></p>
+
       </div>
       <div class="doctor">
-          <img src="./img/drng.jpg" alt=""><br>
-          <p> <span id="bold">Dr. Ng Wai Hock </span></br><span id="bold">MB BCh BAO ( Ireland ) LRCSI LRCPI</span>
+        <div class="doctor-name">
+          <img src="./img/drhew.jpg" alt="">
+          <div class="name">
+            <span id="bold">Dr. Hew Yin Keat </span>
+          </div>
+        </div>
 
-          <br><span id="bold">Dip Dermatology ( Cardiff )</span></br>
-<br><span id="bold">American Academy of Aesthetic Medicine ( AAAM )</span></br>
-<br><span id="bold">American Board of Anti Ageing, Aesthetic & Rejuvenation Med ( ABAARM )</span></br>
-<br><span id="bold">Member of Society of Anti Ageing, Aesthetic & Rejuvenation Med M’sia ( SAAARM )</span></br>
-<br><span id="bold">Member of Academy of Family Physician Malaysia ( AFPM )</span></br>
+          <p> <span id="bold">MB BCh BAO ( IRELAND )</span>
 
-<br>Dr. Vincent Ng completed his Medical Degree with the National University of Ireland in 2002, before pursuing and completing a Diploma in Dermatology from Cardiff in 2008 and gained Fellowship with the Royal College of Family Physician of Australia (RACGP) in 2011. He is also a Board Certified Physician with American Academy of Aesthetic Medicine (AAAM) and American Academy of Anti- Ageing, Aesthetic and Rejuvenation Medicine (ABAARM).
+          <span id="bold">Dip. Prac. Dermatology ( WALES )</span></br>
+          <span id="bold">Member of Malaysian Society of Aesthetic Medicine (MSAM)</span></br>
 
-He has since had many years of experience, combining Medical Dermatology teachings with Aesthetic principles, to achieve satisfying results for all range of patients; from treatment of skin pathology to achieving rejuvenation and delaying skin ageing.
-
-Dr. Vincent Ng believes only in high quality products and services and is therefore well liked by many of his patients. Besides his winning personality and high technology treatment, he is also known as a very dedicated doctor. He believes everyone deserves a chance to look good and at the same time stay healthy; therefore sets out to help his patients with realistic expectations.</br></p>
-
-      </div>
-      <div class="doctor">
-          <img src="./img/drhew.jpg" alt=""><br>
-          <p> <span id="bold">Dr. Hew Yin Keat </span></br><span id="bold">MB BCh BAO ( IRELAND )</span>
-
-          <br><span id="bold">Dip. Prac. Dermatology ( WALES )</span></br>
-<br><span id="bold">Member of Malaysian Society of Aesthetic Medicine (MSAM)</span></br>
-<!-- <br><span id="bold">American Board of Anti Ageing, Aesthetic & Rejuvenation Med ( ABAARM )</span></br>
-<br><span id="bold">Member of Society of Anti Ageing, Aesthetic & Rejuvenation Med M’sia ( SAAARM )</span></br>
-<br><span id="bold">Member of Academy of Family Physician Malaysia ( AFPM )</span></br> -->
-
-<br>Dr. Y.K Hew has been practicing medicine since 1997. He received his medical degree from the Royal College of Surgeons In Ireland and has worked in England before returning to Malaysia, where his great interest in the field of cosmetic dermatology led him to pursue his training in this field. He received his post-graduated Diploma in Practical Dermatology from University of Wales, U.K.
-    <br><br>Dr. Y.K. Hew has undergone extensive training and has years of experience in cosmetic dermatology. He is highly respected and widely recognized for his expertise in this field. He believes in total patient care and providing the best professional medical skin possible. He is especially interested in the latest “ no down time” procedures that are extremely effective and practical for today lifestyles.
-          </p>
+          <br>Dr. Y.K Hew has been practicing medicine since 1997. He received his medical degree from the Royal College of Surgeons In Ireland and has worked in England before returning to Malaysia, where his great interest in the field of cosmetic dermatology led him to pursue his training in this field. He received his post-graduated Diploma in Practical Dermatology from University of Wales, U.K.
+              <br><br>Dr. Y.K. Hew has undergone extensive training and has years of experience in cosmetic dermatology. He is highly respected and widely recognized for his expertise in this field. He believes in total patient care and providing the best professional medical skin possible. He is especially interested in the latest “ no down time” procedures that are extremely effective and practical for today lifestyles.
+                    </p>
 
       </div>
+    </div>
     </section>
     <footer>
-        <p>&copy; All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
     </footer>
-
   </body>
 
 
