--- a/newsandmedia.html
+++ b/newsandmedia.html
@@ -4,17 +4,40 @@
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./img/newlife-favicon.png">
+    <meta name="keywords" content="skin laser, tattoo removal, filler, get rid of pigmentation, get rid of acne scars, remove dark spots, revitalize skin, kerinchi bangsar, how to look younger, how to look pretty">
+    <meta name="description" content="Newlife-Lifestyle Aesthetic Clinic">
+    <meta property="og:title" content="Newlife-Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
+    <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
+    <meta name="copyright" content="Zenia Design">
+    <meta name="author" content="Zenia Design">
+    <meta name="web_author" content="Zenia Design">
+    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="reply-to" content="zeniadesign@hotmail.com">
+    <meta name="rating" content="general">
+    <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
+    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
     <script  src="./js/animate.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113543330-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113543330-1');
+</script>
+
   </head>
   <body>
-    <span id="logo">  <img src="./img/newlife-logo.png" alt=""></span>
+    <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
 
     <div class="menu-bar">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
 
       <nav>
@@ -22,14 +45,14 @@
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
-          <li><a href="newsandmedia.html">news & media</a></li>
+          <li ><a href="newsandmedia.html" class="active link">news & media</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </div>
     <div class="mobile-menu">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
       <nav>
         <ul>
@@ -37,32 +60,35 @@
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
-          <li><a href="newsandmedia.html">news & media</a></li>
+          <li ><a href="newsandmedia.html" class="active link">news & media</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
       </nav>
     </div>
     <div class="contact-links">
       <ul>
-        <li><a href="tel:0322422822"><img src="./img/phoneicon1.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="tel:0322422822"><img src="./img/phoneicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://api.whatsapp.com/send?phone=60176960238&text=Hello,%20I%20would%20to%20make%20an%20appointment%20with%20your%20doctor." target="_blank"><img src="./img/whatsappicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://waze.com/ul?ll=3.1101032,101.6614844" target="_blank"><img src="./img/waze-icon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="mailto:lifecarelifestyle@yahoo.com"><img src="./img/emailicon.png" alt="" width="42px" height="42px"></a></li>
       </ul>
     </div>
+    <div class="section-title">
+      <h2>Media</h2>
+    </div>
     <div class="media">
-      <h1>Media</h1>
       <h3>Video Playlist</h3>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLX9LOUxjvr5CvXPX_gPCp7YGgb1jqXNtg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
+    <div class="section-title">
+      <h2>News</h2>
+    </div>
     <div class="news">
-      <h1>News</h1>
       <h3>2014</h3>
       <img src="./img/news-2014.jpg" alt="">
     </div>
     <footer>
-        <p>&copy; All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
     </footer>
-
     </body>
 </html>
