--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,42 @@
   <head>
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
+    <meta name="viewport" content="width=device-width", initial-scale="1.0" user-scalable=no>
+    <meta name="keywords" content="botox, placenta, bangsar, Kuala Lumpur, eliminate acne scars, remove dark spots, fast weight loss, gene testing for diseases, how to look younger, how to look pretty">
+    <meta name="description" content="The Best Aesthetic Doctors In Kuala Lumpur | Newlife-Lifestyle Aesthetic Clinic">
+    <meta property="og:title" content="Newlife-Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
+    <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
+    <meta name="copyright" content="Zenia Design">
+    <meta name="author" content="Zenia Design">
+    <meta name="web_author" content="Zenia Design">
+    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="reply-to" content="zeniadesign@hotmail.com">
+    <meta name="rating" content="general">
+    <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./img/newlife-favicon.png">
+    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
     <script  src="./js/animate.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113543330-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113543330-1');
+</script>
+
   </head>
   <body>
-    <span id="logo">  <img src="./img/newlife-logo.png" alt=""></span>
+    <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
 
     <div class="menu-bar">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
 
       <nav>
@@ -23,13 +47,13 @@
           <li><a href="about.html">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
-          <li><a href="contact.html">contact</a></li>
+          <li ><a href="contact.html" class="active link">contact</a></li>
         </ul>
       </nav>
     </div>
     <div class="mobile-menu">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
       <nav>
         <ul>
@@ -38,38 +62,45 @@
           <li><a href="about.html">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
-          <li><a href="contact.html">contact</a></li>
+          <li ><a href="contact.html" class="active link">contact</a></li>
         </ul>
       </nav>
     </div>
     <div class="contact-links">
       <ul>
-        <li><a href="tel:0322422822"><img src="./img/phoneicon1.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="tel:0322422822"><img src="./img/phoneicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://api.whatsapp.com/send?phone=60176960238&text=Hello,%20I%20would%20to%20make%20an%20appointment%20with%20your%20doctor." target="_blank"><img src="./img/whatsappicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://waze.com/ul?ll=3.1101032,101.6614844" target="_blank"><img src="./img/waze-icon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="mailto:lifecarelifestyle@yahoo.com"><img src="./img/emailicon.png" alt="" width="42px" height="42px"></a></li>
       </ul>
     </div>
-    <div class="contact-bg">
-      <div class="contact-container">
+    <div class="contact-container">
+      <div class="get-in-touch">
         <div class="contact-info">
+          <p> <span id="bold">Get In Touch</span><br>
+          <br>Newlife Lifestyle Aesthetic Clinic,<br> Wisma Lifecare, Level 3,<br> No. 5, Jalan Kerinchi, <br>Bangsar South, 59200 Kuala Lumpur.
+          <br><br>Call us at <a href="tel:0322422822">03 2242 2822</a> or <a href="tel:0176960238">017 696 0238</a><br><br>Opening Hours: Mon-Sat: 9am-6pm , Sun: 9am-2pm
+        </br></p>
+          <img src="./img/wismalifecare.png" alt="" height="400px">
 
-          <p>Wisma Life Care, Level 3, No. 5, Jalan Kerinchi, Bangsar South, 59200 Kuala Lumpur. <br><br>Contact No.: <a href="tel:0322422822">03 2242 2822</a> <a href="tel:0176960238">017 696 0238</a><br><br>Opening Hours: Mon-Sat: 9am-6pm , Sun: 9am-2pm
-          </p>
-          <div class="contact-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.9418126094106!2d101.66148441475725!3d3.1100977977353024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4a2afdbe0b45%3A0xf54d1b8ba0c89e61!2sWisma+Life+Care!5e0!3m2!1sen!2smy!4v1515664044664" width="800" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </div>
-          <h5>Other Branch</h5>
-          <h4>New Life Clinic</h4>
-            <p>No. 2-11, Jalan Merbah 3, Bandar Puchong Jaya, 47100 Puchong Selangor D.E. <br><br>Contact No.: <a href="tel:0380701270">03 8070 1270</a>  <a href="tel:0162387313">016 238 7313</a><br><br>Opening Hours: Tue-Fri: 11am-8pm , Sat-Sun: 10am-6pm
-            </p>
         </div>
-
+        <div class="newlife-lifestyle-location">
+        </div>
       </div>
 
+      <div class="newlife-lifestyle-map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.9418126094106!2d101.66148441475725!3d3.1100977977353024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc4a2afdbe0b45%3A0xf54d1b8ba0c89e61!2sWisma+Life+Care!5e0!3m2!1sen!2smy!4v1515664044664" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div class="kota-kemuning-branch">
+        <h4>Other branch</h4>
+        <h4>New Lifestyle Kota Kemuning</h4><br>
+        <p>18-G, Jalan Anggerik Vanilla R31/R, Kota Kemuning, Shah Alam, Selangor<br><br>Contact No.: <a href="tel:0380701270">03 8070 1270</a>  <a href="tel:0162387313">016 238 7313</a><br><br>Opening Hours: Tue-Fri: 11am-8pm , Sat-Sun: 10am-6pm
+
+      </div>
     </div>
+
     <footer>
-        <p>&copy; All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+        <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
     </footer>
 
   </body>
