--- a/index.html
+++ b/index.html
@@ -3,20 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
+    <meta name="viewport" content="width=device-width", initial-scale="1.0" user-scalable=no>
+    <meta name="keywords" content="cosmetic treatments, anti-aging, bangsar south, kuala lumpur,  wisma lifecare , youthful skin, timeless aging, gene testing for diseases, how to look younger, how to look pretty">
+    <meta name="description" content="Always Have A Youthful Skin | Newlife-Lifestyle Aesthetic Clinic">
+    <meta property="og:title" content="Newlife-Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
+    <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
+    <meta name="copyright" content="Zenia Design">
+    <meta name="author" content="Zenia Design">
+    <meta name="web_author" content="Zenia Design">
+    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="reply-to" content="zeniadesign@hotmail.com">
+    <meta name="rating" content="general">
+    <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./img/newlife-favicon.png">
+    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script  src="./js/animate.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113543330-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113543330-1');
+</script>
+
   </head>
   <body>
-    <span id="logo">  <img src="./img/newlife-logo.png" alt=""></span>
+    <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
 
     <div class="menu-bar">
       <nav>
         <ul>
-          <li><a href="index.html">home</a></li>
+          <li ><a href="index.html" class="active link">home</a></li>
           <li><a href="about.html">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
@@ -26,12 +49,12 @@
     </div>
     <div class="mobile-menu">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
       <nav>
         <ul>
           <span class="closebtn"><button type="button" name="button">&times;</button></span>
-          <li><a href="index.html">home</a></li>
+          <li><a href="index.html" class="active link">home</a></li>
           <li><a href="about.html">about</a></li>
           <li><a href="treatment.html">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
@@ -41,7 +64,7 @@
     </div>
     <div class="contact-links">
       <ul>
-        <li><a href="tel:0322422822"><img src="./img/phoneicon1.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="tel:0322422822"><img src="./img/phoneicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://api.whatsapp.com/send?phone=60176960238&text=Hello,%20I%20would%20to%20make%20an%20appointment%20with%20your%20doctor." target="_blank"><img src="./img/whatsappicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://waze.com/ul?ll=3.1101032,101.6614844" target="_blank"><img src="./img/waze-icon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="mailto:lifecarelifestyle@yahoo.com"><img src="./img/emailicon.png" alt="" width="42px" height="42px"></a></li>
@@ -49,64 +72,69 @@
     </div>
     <div class="container">
       <div class="home-feature">
-        <img src="./img/feature1.jpg" alt="" width="100%" height="100%">
+        <img src="./img/feature-2.jpg" alt="" width="100%" height="100%">
       </div>
       <div class="index-about">
-          <img src="./img/index-about.jpg" alt=""> <div class="about-info"> <p id="bold">Welcome to Newlife Lifestyle Clinic:</p>
+          <img src="./img/index-about.jpg" alt="" width="100%" > <div class="about-info"> <p id="bold">Welcome to Newlife Lifestyle Clinic:</p>
           <br>Located inside <a href="www.lifecarediagnostic.com/">Wisma Life Care, Bangsar</a>, our Clinic offers medical aesthetic procedures and corrective skincare plus rejuvenation
             treatment. With us, you can get the most benefits of cosmetic procedure without down time, and
             with little or no pain.
             <br><br>We provide various non-invasive skin care options using advanced and clinically proven technologies.
             We offer the perfect blend of aesthetics and science for your skin health.
-            <br><a href="about.html">Read more</a>
+            <br><button type="button" name="button"><a href="about.html">Read more</a></button>
           </div>
       </div>
       <div class="index-treatment">
-        <img src="./img/index-treatment.jpg" alt="" width="312px" height="">
         <div class="treatment-info"> <p id="bold">We provide you one stop solution for your inside out beauty needs</p>
           <br>Newlife Lifestyle Clinic offers a comprehensive solution for beauty enhancement, with a combination of <span id="bold">Aesthetic Medicine</span>
           with preventive and regenerative medicine <span id="bold">Anti-Aging</span> to fulfill every aspect of your beauty needs. In addition
           we have <span id="bold">Gene Testing</span>, which maps out individual characteristics.
-          <br><a href="treatment.html">Learn more</a>
+          <br> <button type="button" name="button"> <a href="treatment.html">Learn more</a></button>
+        </div>
+        <div class="newlife-lifestyle-treatment-pic">
+          <img src="./img/index-treatment.jpg" alt="">
         </div>
       </div>
       <div class="index-media">
         <div class="media-info">
           <h2>In collaboration with Eucerin</h2>
           <p>Our doctor, Dr. Vincent Ng Wai Hock explains skin care dos and don'ts for eczema patients while travelling. </p>
-          <br><a href="newsandmedia.html">Watch more</a> videos on eczema by Dr. Vincent Ng Wai Hock. <br><br>
+          <br> <button type="button" name="button"><a href="newsandmedia.html">Watch more</a></button>  videos on eczema by Dr. Vincent Ng Wai Hock. <br><br>
         </div>
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/BTg_5Wxopl4" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
       </div>
 
-      <div class="index-reviews">
-        <h2>What our customers are saying about us:</h2>
         <div class="comments">
+          <h2>What our customers are saying about us:</h2>
 
-            <p>"The doctor was thorough explaining the results of the experience and options for better results. And Jacqueline was really good in explaining and sharing further results pic etc. Great experience. Definitely would keep coming." <br><br>—Marsyita
-            </p>
-            <p>"Friendly staffs, proper explanation and treatment were given." <br><br>––Phing
-            </p>
-            <p>"Dr. Vincent was really nice and explained professionally on my skin condition. Then one of his staff explained regarding the procedures and other possible add-ons. Although I did not take the add-ons staff was still very friendly." <br><br>––Wen Yi
-            </p>
-            <p>"Great consultation. They managed appointment well. No long wait. Treatment was done very professionally." <br><br>––DollyC
-            </p>
-            <p>"Great service from the staff and doctor. Love how they explained to me throughout my procedure and kept me comfortable. They were also non pushy about the packages." <br><br> ––Jia Shin
-            </p>
-            <p>"First time visit, all the staffs are very friendly and good environment." <br><br>––Sandy Foo
-            </p>
-            <p>"Professional service by professional + lovely + pleasant people." <br><br>–– Ahmad Shahril Izham
-            </p>
-            <p>"Love their service. Not pushy or hard selling." <br><br>––Molly Tean
-            </p>
+          <div class="customer-review">
+            <q >The doctor was thorough explaining the results of the experience and options for better results. And Jacqueline was really good in explaining and sharing further results pic etc. Great experience. Definitely would keep coming. </q><br><br>—Marsyita
+          </div>
+          <div class="customer-review">
+            <q>Dr. Vincent was really nice and explained professionally on my skin condition. Then one of his staff explained regarding the procedures and other possible add-ons. Although I did not take the add-ons staff was still very friendly. </q><br><br>––Wen Yi
+          </div>
+          <div class="customer-review">
+            <q>Great consultation. They managed appointment well. No long wait. Treatment was done very professionally.</q><br><br>––DollyC
+          </div>
+          <div class="customer-review">
+            <q>Great service from the staff and doctor. Love how they explained to me throughout my procedure and kept me comfortable. They were also non pushy about the packages.</q> <br><br> ––Jia Shin
+          </div>
+          <div class="customer-review">
+            <q>First time visit, all the staffs are very friendly and good environment.</q> <br><br>––Sandy Foo
+          </div>
+          <div class="customer-review">
+            <q>Professional service by professional + lovely + pleasant people.</q><br><br>–– Ahmad Shahril Izham
+          </div>
+        <a class="prev" onclick="minusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="minusSlides(1)">&#10095;</a>
         </div>
-      </div>
+
     </div>
 
 
   </body>
   <footer>
-      <p>&copy; All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+      <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
   </footer>
 
 </html>
