--- a/treatment.html
+++ b/treatment.html
@@ -3,25 +3,49 @@
   <head>
     <meta charset="utf-8">
     <title>Newlife Lifestyle Aesthetic Clinic</title>
+    <meta name="viewport" content="width=device-width", initial-scale="1.0" user-scalable=no>
+    <meta name="keywords" content="botox, anti-aging, thread lift, eliminate wrinkles, eliminate acne scars, remove dark spots, fast weight loss, gene testing for diseases, how to look younger, how to look pretty">
+    <meta name="description" content="How To Look Young And Beautiful Always | Newlife-Lifestyle Aesthetic Clinic">
+    <meta property="og:title" content="Newlife-Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:site_name" content="Newlife Lifestyle Aesthetic Clinic Bangsar">
+    <meta property="og:description" content="Newlife Lifestyle Aesthetic Clinic in Bangsar South. We provide a wide range of cosmetic treatments by experienced and professional doctors. ">
+    <meta property="og:image" content="./img/newlife-lifestyle-clinic-pic1.jpg">
+    <meta name="copyright" content="Zenia Design">
+    <meta name="author" content="Zenia Design">
+    <meta name="web_author" content="Zenia Design">
+    <meta name="contact" content="zeniadesign@hotmail.com">
+    <meta name="reply-to" content="zeniadesign@hotmail.com">
+    <meta name="rating" content="general">
+    <meta name="abstract" content="Aesthetic clinic offers non-surgical cosmetic treatments in Bangsar, Kuala Lumpur.">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./img/newlife-favicon.png">
+    <link rel="icon" type="image/png" href="/img/newlife-favicon.png">
     <script src="./js/jquery.js" ></script>
     <script  src="./js/animate.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="./css/newlifestyle.min.css" type="text/css">
+    <link rel="stylesheet" href="/css/newlifestyle.min.css" type="text/css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113543330-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-113543330-1');
+</script>
+
   </head>
   <body>
-    <span id="logo">  <img src="./img/newlife-logo.png" alt=""></span>
+    <span id="logo">  <img src="/img/newlife-logo.png" alt=""></span>
 
     <div class="menu-bar">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
 
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
-          <li><a href="treatment.html">treatment</a></li>
+          <li ><a href="treatment.html" class="active link">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
@@ -29,14 +53,14 @@
     </div>
     <div class="mobile-menu">
       <span class="menu-bar-mobile">
-        <h4>Menu</h4><img src="./img/lifestyle-menu.png" alt="" width="40px" height="40px">
+        <h4>Menu</h4><img src="/img/lifestyle-menu.png" alt="" width="40px" height="40px">
       </span>
       <nav>
         <ul>
           <span class="closebtn"><button type="button" name="button">&times;</button></span>
           <li><a href="index.html">home</a></li>
           <li><a href="about.html">about</a></li>
-          <li><a href="treatment.html">treatment</a></li>
+          <li> <a href="treatment.html" class="active link">treatment</a></li>
           <li><a href="newsandmedia.html">news & media</a></li>
           <li><a href="contact.html">contact</a></li>
         </ul>
@@ -44,69 +68,91 @@
     </div>
     <div class="contact-links">
       <ul>
-        <li><a href="tel:0322422822"><img src="./img/phoneicon1.png" alt="" width="42px" height="42px"></a></li>
+        <li><a href="tel:0322422822"><img src="./img/phoneicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://api.whatsapp.com/send?phone=60176960238&text=Hello,%20I%20would%20to%20make%20an%20appointment%20with%20your%20doctor." target="_blank"><img src="./img/whatsappicon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="https://waze.com/ul?ll=3.1101032,101.6614844" target="_blank"><img src="./img/waze-icon.png" alt="" width="42px" height="42px"></a></li>
         <li><a href="mailto:lifecarelifestyle@yahoo.com"><img src="./img/emailicon.png" alt="" width="42px" height="42px"></a></li>
       </ul>
     </div>
+    <div class="section-title">
+      <h2>Our Clinical Solutions</h2>
+    </div>
     <div class="solutions">
       <div class="aesthetic-med">
-        <img src="./img/laser.png" alt="">
+        <img src="./img/laser.svg" alt="">
         <h2>Aesthetic Medicine</h2>
         <p>Aesthetic medicine involves high-technology skin care that represents the fusion of healthcare and beauty services. These services involve the use of lasers or other engery based devices without surgery. With us, you can have the benefits of cosmetic procedures without down time.</p>
       </div>
       <div class="anti-aging">
-        <img src="./img/injection.png" alt="">
+        <img src="./img/injection.svg" alt="">
         <h2>Anti-Aging Medicine</h2>
         <p>Anti-aging is the new era of medical science to promote our health with ultimate aim not only to slow down the aging process in our bodies but also to improve quality of our lives. To achieve this, it applies preventive medicine and regenerative medicine. Preventive medicine means early detection of disease through medical check-up. Regenerative medicine works on the principles of giving our bodies the right diet, appropriate hormonal replacement and supplements to improve our cells' biological age and enhance our immune system.</p>
       </div>
       <div class="gene-test">
         <img src="./img/genetest.png" alt="">
         <h2>Gene Test</h2>
-        <p>Gene is the blueprint of life. It maps out our individual characteristics. Gene Test is here to help you find out SNP or particular mal condition caused in nucleotide, which results in different genetic traits that may cause some diseases or affect some physical system. <br><span>What will you get from Gene Test?</span> <br>Know your risk of developing cancers, such as prostate cancer, breast cancer and colon cancer; the risk of developing some frequently found diseases, such as cardiovascular disease, high cholesterol, hypertension, diabetes and ALzheimer's disease so that you can design a customized diet, lifestle and supplement that helps reduce these risks. </p>
+        <p>Gene is the blueprint of life. It maps out our individual characteristics. Gene Test is here to help you find out SNP or particular mal condition caused in nucleotide, which results in different genetic traits that may cause some diseases or affect some physical system. Know your risk of developing cancers, such as prostate cancer, breast cancer and colon cancer; the risk of developing some frequently found diseases, such as cardiovascular disease, high cholesterol, hypertension, diabetes and Alzheimer's disease so that you can design a customized diet, lifestle and supplement that helps reduce these risks. </p>
       </div>
     </div>
+    <div class="treatment-slide">
+      <div class="treatment-pic">
+        <img src="./img/treatment-1.jpg" alt="" width="100%" height="100%">
+      </div>
+      <div class="treatment-pic">
+        <img src="./img/treatment-2.jpg" alt="" width="100%" height="100%">
+      </div>
+      <div class="treatment-pic">
+        <img src="./img/treatment-3.jpg" alt="" width="100%" height="100%">
+      </div>
+    </div>
+    <br>
+    <div class="section-title">
+      <h2>Our Treatments</h2>
+    </div>
     <div class="treatment-types">
-      <h2>Types of Treatment</h2>
-      <!-- <div class="laser"> -->
         <h3>Laser</h3>
         <p>Laser treatment is a precise, predictable and safe procedure. We use advanced laser technology for skin rejuvenation, to reduce wrinkles, minimise pore size, remove uneven pigmentation, age spots, warts, moles, cysts and spider vein. It is also used for permanent hair reduction and for tattoo removal.
           <br><br>a) Acne treatment <br>b) Photo Rejuvenation : light treatment to revitalize skin.
         </p>
-      <!-- </div> -->
-      <!-- <div class="platelet-prp"> -->
         <h3>Platelet Rich Plasma (PRP)</h3>
         <p>To stimulate cells to regenerate new tissues. This is the latest technology applied in aesthetic field, and highly effective ageing prevention.</p>
-      <!-- </div> -->
-      <!-- <div class="thread-lift"> -->
         <h3>Thread Lift</h3>
         <p>Thread lift is a minimally invasive cosmetique enhancement technique that lifts sagging skin on the face and neck.</p>
-      <!-- </div> -->
-      <!-- <div class="botox"> -->
         <h3>Botox</h3>
         <p>Tiny injections of botox can smooth out frown lines, crow's feet and horizontal forehead lines as well as hyperhidrosis (excessive sweating), lift brows, contour square jawlines (masseter) and even elevate nasal tip.</p>
-      <!-- </div> -->
-      <!-- <div class="dermal-fillers"> -->
         <h3>Dermal Fillers</h3>
         <p>This is used to smoothen and fill out deep furrows, deep wrinkles, lines and to plump-up lips.</p>
-      <!-- </div> -->
-      <!-- <div class="chemical-peels"> -->
         <h3>Chemical Peels</h3>
         <p>We perform various depths of chemical peels customized to each patient's needs. The peels are used to improve the appearance of wrinkles, brown spots, acne and general skin texture.</p>
-      <!-- </div> -->
         <h3>Mesotherapy </h3>
         <p>Commonly used to reduce cellulite and unsightly fat deposits. Also for skin rejuvenation.
         </p>
-      <!-- </div> -->
         <h3>Microdermabrasion</h3>
         <p>Procedure is designed to soften fine wrinkles, smooth scarring and rejuvenate skin by removing the top most layer of dead skin and promoting unblemished skin growth.</p>
         <h3>Radio Frequency</h3>
         <p>Non-invasive treatment of cellulite; inducing collagen remodelling and shrinkage for firmer looking skin. </p>
+      <div class="other-treatments">
+        <h3>Other Treatments</h3>
+        <ul>
+          <li>Age Spots</li>
+          <li>Photo Rejuvenation</li>
+          <li>Rejuvenation of Aging</li>
+          <li>Warts & Lesions</li>
+          <li>Wrinkles & Lines</li>
+          <li>Facial Rejuvenation</li>
+          <li>Specialised Skin Care Product</li>
+          <li>Spider Vein Treatment</li>
+          <li>Excessive Sweating</li>
+          <li>Slimming Services</li>
+          <li>Cellulite Treatment</li>
+          <li>Tattoo Removal</li>
+          <li>Lontophoresis Vit-C</li>
+        </ul>
+      </div>
     </div>
   </body>
   <footer>
-      <p>&copy; All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
+      <p><a href="http://www.zeniadesign.com" target="_blank">&copy; </a>All Rights Reserved. Newlife Lifestyle Aesthetic Clinic</p>
   </footer>
 
 </html>
